# geo-datasets

./: .dockerignore  .gitignore  404.html  Containerfile  LICENSE.md  README.md  debug_tips.md  env.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
CRU/: README.md  build_monthly.py  cru_monthly_precipitation_ingest.json  extract_data.R  jobscript  prepare_monthly.py
accessibility_map/: accessibility_map_ingest.json  raster_ingest.json
acled/: acled_ingest.json  raster_ingest.json
africa_child_mortality/: africa_child_mortality_ingest.json  raster_ingest.json
afrobarometer/: plot_afb.py  raster_ingest.json  rasterize.py  rasterize_alt.py
air_pollution/: build_air_pollution_rasters.py  o3_ingest.json  o3_raster_ingest.json  pm25_ingest.json
atlasofurbanexpansion/: cities_prep.py  studyarea_boundary_ingest.json  urban1990_boundary_ingest.json  urban2000_boundary_ingest.json  urban2014_boundary_ingest.json
black_marble/: .gitignore  download.py  mosaic.py  utility.py
boundaries/: geoboundaries_ingest.py
chinese_finance/: boundary_10000m.json  boundary_2500m.json  boundary_5000m.json  boundary_500m.json  boundary_raw.json  commitments_all.json  commitments_all_raster_ingest.json  commitments_energy.json  commitments_energy_raster_ingest.json  commitments_industry.json  commitments_industry_raster_ingest.json  commitments_transport.json  commitments_transport_raster_ingest.json
critical_habitats/: config.ini  config.toml  main.py  raster_ingest.json
cru_ts/: README.md  build_yearly.py  config.ini  config.toml  cru_yearly_precipitation_ingest.json  download.sh  environment.yml  export_env.sh  extract_data.py  flow.py  main.py  monthly_pre_ingest.json  monthly_tmp_ingest.json  yearly_jobscript  yearly_pre_ingest.json  yearly_tmp_ingest.json
data_manager/: pyproject.toml
dataset-guide/: index.html
gem/: job  (+6 more)
(+1139 files in other folders)
