[project]
name = "geo-datasets"
version = "0.1.0"
description = "Dataset import scripts for GeoQuery"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "boto3>=1.37.1",
    "data-manager",
    "geopandas>=1.0.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "prefect==2",
    "pyarrow>=19.0.1",
    "pyquadkey2>=0.3.2",
    "rasterio>=1.4.3",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
data-manager = { path = "data_manager" }
