[project]
name = "geo-datasets"
version = "0.1.0"
description = "Dataset import scripts for GeoQuery"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "affine>=2.4.0",
    "beautifulsoup4>=4.13.4",
    "bokeh>=2.4.3",
    "boto3>=1.37.35",
    "boxsdk[jwt]>=3.6.1",
    "click>=8.1.8",
    "dask-jobqueue>=0.8.1",
    "dask-kubernetes>=2025.4.1",
    "data-manager",
    "distancerasters>=0.3.3",
    "distributed>=2023.3.1",
    "fiona>=1.10.1",
    "geopandas>=1.0.1",
    "h5py>=3.13.0",
    "lz4>=4.3.2",
    "netcdf4>=1.7.2",
    "pandas>=2.1.0",
    "prefect>=2.20.10",
    "proj>=0.2.0",
    "pyhdf>=0.11.6",
    "requests>=2.28.1",
    "shapely>=2.1.0",
    "sparse>=0.16.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
data-manager = { path = "data_manager" }
